[workspace]
resolver = "2"
members = [
  "xtask",
]

[workspace.package]
authors = ["Posit Software, PBC"]
edition = "2021"
# The Rust code is MIT, the `sources/` are GPL-2
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.51", features = ["derive"] }
flate2 = "1.1.9"
tar = "0.4.45"
ureq = "3.3.0"
walkdir = "2"
zstd = "0.13"
