[package]
name = "xtask"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
flate2.workspace = true
tar.workspace = true
ureq.workspace = true
walkdir.workspace = true
zstd.workspace = true
